err/minihallib.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/minihallib'...
Compiling './lib/python3.5/site-packages/minihallib/HALDevice.py'...
***   File "./lib/python3.5/site-packages/minihallib/HALDevice.py", line 83
    except dbus.DBusException, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minihallib/HALEventerThread.py'...
***   File "./lib/python3.5/site-packages/minihallib/HALEventerThread.py", line 127
    print "%d..." % (xstep+1)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minihallib/HALWrapper.py'...
***   File "./lib/python3.5/site-packages/minihallib/HALWrapper.py", line 177
    print 'Quiting... (%s)' % self.capability
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/minihallib-0.1.10.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
